data/derived/sp14/progs/unify/prog1761.ml.out
Characters 62-65:
  addPHelper pos;;
             ^^^
Error: This expression has type int list
       but an expression was expected of type int
